--- a/app/views/shared/sidebar/_sidebar.html.erb
+++ b/app/views/shared/sidebar/_sidebar.html.erb
@@ -17,9 +17,8 @@
     <!-- Lista de navegação -->
     <ul class="nav flex-column pt-2 px-2" id="sidebar-items">
       <% sidebar_items = [
-       { path: root_path,                        icon: 'ph-house',                 label: 'Home' },
-       { path: root_path,                        icon: 'ph-bookmarks',             label: 'Publicações' },
-       { path: root_path,                        icon: 'ph-dog',                   label: 'Espécies',     },    # ability: [:read, ] },
+       { path: root_path,                                   icon: 'ph-house',                 label: 'Home' },
+       { path: g_tipo_usuarios_path,                        icon: 'ph-users',                 label: 'Tipos de Usuários',   } # ability: [:read, ] },,  
       ] %>
       <% sidebar_items.each do |item| %>
         <% if item[:ability].nil? || can?(*item[:ability]) %>
@@ -42,7 +41,6 @@
   }
 
   .active-link {
-    background-color: #dee2e6 !important;
     border-left: 4px solid #5b260d;
     font-weight: 600;
   }
