--- a/app/views/shared/sidebar/_sidebar.html.erb
+++ b/app/views/shared/sidebar/_sidebar.html.erb
@@ -17,8 +17,9 @@
     <!-- Lista de navegação -->
     <ul class="nav flex-column pt-2 px-2" id="sidebar-items">
       <% sidebar_items = [
-       { path: root_path,                                   icon: 'ph-house',                 label: 'Home' },
-       { path: g_tipo_usuarios_path,                        icon: 'ph-users',                 label: 'Tipos de Usuários',   } # ability: [:read, ] },,  
+       { path: root_path,                                   icon: 'ph-house',                     label: 'Home' },
+       { path: g_tipo_usuarios_path,                        icon: 'ph-users',                     label: 'Tipos de Usuários'  }, # ability: [:read, ] },,  
+       { path: g_estados_path,                              icon: 'ph-chart-bar',                 label: 'Estados',   }   
       ] %>
       <% sidebar_items.each do |item| %>
         <% if item[:ability].nil? || can?(*item[:ability]) %>
