--- a/app/views/shared/sidebar/_sidebar.html.erb
+++ b/app/views/shared/sidebar/_sidebar.html.erb
@@ -19,7 +19,9 @@
       <% sidebar_items = [
        { path: root_path,                                   icon: 'ph-house',                     label: 'Home' },
        { path: g_tipo_usuarios_path,                        icon: 'ph-users',                     label: 'Tipos de Usuários'  }, # ability: [:read, ] },,  
-       { path: g_estados_path,                              icon: 'ph-chart-bar',                 label: 'Estados',   }   
+       { path: g_estados_path,                              icon: 'ph-chart-bar',                 label: 'Estados'  }, 
+       { path: g_cidades_path,                              icon: 'ph-cards',                     label: 'Cidades',   }   
+
       ] %>
       <% sidebar_items.each do |item| %>
         <% if item[:ability].nil? || can?(*item[:ability]) %>
