--- a/app/views/a_unidade_treinamentos/index.html.erb
+++ b/app/views/a_unidade_treinamentos/index.html.erb
@@ -1,12 +1,12 @@
-<%= render "shared/context_nav", title: t("activerecord.models.#{GCidade.model_name.i18n_key}.other"), new_path: new_g_cidade_path do  %>
-  <span class="breadcrumb-item active"><%= t("activerecord.models.#{GCidade.model_name.i18n_key}.other") %></span>
+<%= render "shared/context_nav", title: t("activerecord.models.#{AUnidadeTreinamento.model_name.i18n_key}.other"), new_path: new_a_unidade_treinamento_path do  %>
+  <span class="breadcrumb-item active"><%= t("activerecord.models.#{AUnidadeTreinamento.model_name.i18n_key}.other") %></span>
 <% end %>
 <div class="card">
   <div class="card-header d-flex">
     <%= search_form_for @q, html: { class: "d-flex gap-2" , autocomplete: "off"} do |f| %>
-      <%= f.search_field :nome_fantasia_cont, class: "form-control", placeholder: "Pesquisar" %>
+      <%= f.search_field :descricao_cont, class: "form-control", placeholder: "Pesquisar" %>
       <%= f.button(type: 'submit', class: 'btn btn-info') { tag.i(class: 'ph-magnifying-glass') } %>
-      <%= link_to  tag.i(class: 'ph-x-circle'), g_cidades_path, class: "btn btn-light" if params[:q] %>
+      <%= link_to  tag.i(class: 'ph-x-circle'), a_unidade_treinamentos_path, class: "btn btn-light" if params[:q] %>
     <% end %>
   </div>
   <div class="card-body">
@@ -15,12 +15,12 @@
         <thead>
           <tr>
             <th class="text-center">Ações</th>
-            <th><%= sort_link(@q, :nome_fantasia, t("activerecord.attributes.g_cidade.nome_fantasia")) %></th>
-            <th><%= sort_link(@q, :g_estado, t("activerecord.attributes.g_cidade.g_estado")) %></th>
+            <th><%= sort_link(@q, :descricao, t("activerecord.attributes.a_unidade_treinamento.descricao")) %></th>
+            <th><%= sort_link(@q, :a_zona_treinamento, t("activerecord.attributes.a_unidade_treinamento.a_zona_treinamento")) %></th>
           </tr>
         </thead>
         <tbody>
-          <% @g_cidades.each do |g_cidade| %>
+          <% @a_unidade_treinamentos.each do |a_unidade_treinamento| %>
             <tr>
               <td class="text-center">
                 <div class="dropdown-toggle">
@@ -29,16 +29,16 @@
                   </a>
                   <div class="dropdown-menu" style="">
                     <div class="dropdown-header">Opções</div>
-                    <%= link_to edit_g_cidade_path(g_cidade), class: "dropdown-item" do %>
+                    <%= link_to edit_a_unidade_treinamento_path(a_unidade_treinamento), class: "dropdown-item" do %>
                       <i class="ph-pen me-2"></i> Editar
                     <% end %>
-                    <%= form_for g_cidade, method: :delete do |f| %>
-                      <a class="dropdown-item hand-pointer " data-confirm-delete="<%= g_cidade_path(g_cidade) %>" data-csrf-token="<%= form_authenticity_token %>">
+                    <%= form_for a_unidade_treinamento, method: :delete do |f| %>
+                      <a class="dropdown-item hand-pointer " data-confirm-delete="<%= a_unidade_treinamento_path(a_unidade_treinamento) %>" data-csrf-token="<%= form_authenticity_token %>">
                         <i class="ph-trash-simple me-2"></i>Excluir
                       </a>
                     <% end %>
-                    <td><%= g_cidade.nome_fantasia %></td>
-                    <td><%= g_cidade.g_estado.nome_fantasia %></td>
+                    <td><%= a_unidade_treinamento.descricao %></td>
+                    <td><%= a_unidade_treinamento.a_zona_treinamento.descricao %></td>
                   </div>
                 </div>
               </td>
