--- a/app/views/shared/sidebar/_sidebar.html.erb
+++ b/app/views/shared/sidebar/_sidebar.html.erb
@@ -19,6 +19,7 @@
       <% sidebar_items = [
        { path: root_path,                                icon: 'ph-house',                            label: 'Home' },
        { path: g_tipo_usuarios_path,                     icon: 'ph-users',                            label: 'Tipos de Usuários'  }, # ability: [:read, ] },,  
+       { path: a_atletas_path,                           icon: 'ph-users-three',                      label: 'Atletas'   },   
        { path: g_estados_path,                           icon: 'ph-chart-bar',                        label: 'Estados'  }, 
        { path: g_cidades_path,                           icon: 'ph-cards',                            label: 'Cidades'   },
        { path: a_unidade_treinamentos_path,              icon: 'ph-codepen-logo',                     label: 'CT de Treinamento'   }, 
