--- a/app/views/a_atletas/_form.html.erb
+++ b/app/views/a_atletas/_form.html.erb
@@ -13,37 +13,37 @@
       <%= f.error_notification %>
       <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
       <div class="row">
-        <div class="col-12">
-          <%= f.input :nome, input_html: { class: "capitalize"}, placeholder: "Nome"  %>
+        <div class="col-4">
+          <%= f.input :nome, input_html: { class: "capitalize"}, placeholder: "Nome Completo"  %>
         </div>
-        <div class="col-12">
+        <div class="col-4">
           <%= f.input :cpf, input_html: { class: "capitalize"}, placeholder: "Cpf"  %>
         </div>
-        <div class="col-12">
-          <%= f.input :data_nascimento, input_html: { class: "capitalize"}, placeholder: "Data nascimento"  %>
-        </div>
-        <div class="col-12">
-          <%= f.input :contato1, input_html: { class: "capitalize"}, placeholder: "Contato1"  %>
-        </div>
-        <div class="col-12">
-          <%= f.input :contato2, input_html: { class: "capitalize"}, placeholder: "Contato2"  %>
-        </div>
-        <div class="col-12">
+        <div class="col-4">
           <%= f.input :nacionalidade, input_html: { class: "capitalize"}, placeholder: "Nacionalidade"  %>
         </div>
-        <div class="col-12">
+        <div class="col-4">
+          <%= f.input :data_nascimento, input_html: { class: "capitalize"}, placeholder: "Data nascimento"  %>
+        </div>
+        <div class="col-4">
+          <%= f.input :contato1, input_html: { class: "capitalize"}, placeholder: "Contato1"  %>
+        </div>
+        <div class="col-4">
+          <%= f.input :contato2, input_html: { class: "capitalize"}, placeholder: "Contato2"  %>
+        </div>
+        <div class="col-6">
           <%= f.input :nome_pai, input_html: { class: "capitalize"}, placeholder: "Nome pai"  %>
         </div>
-        <div class="col-12">
+        <div class="col-6">
           <%= f.input :nome_mae, input_html: { class: "capitalize"}, placeholder: "Nome mae"  %>
         </div>
-        <div class="col-12">
+        <div class="col-4">
           <%= f.input :responsavel_nome, input_html: { class: "capitalize"}, placeholder: "Responsavel nome"  %>
         </div>
-        <div class="col-12">
+        <div class="col-4">
           <%= f.input :responsavel_cpf, input_html: { class: "capitalize"}, placeholder: "Responsavel cpf"  %>
         </div>
-        <div class="col-12">
+        <div class="col-4">
           <%= f.input :responsavel_rg, input_html: { class: "capitalize"}, placeholder: "Responsavel rg"  %>
         </div>
         <div class="col-12">
@@ -55,32 +55,32 @@
         <div class="col-12">
           <%= f.input :descricao_necessidade, input_html: { class: "capitalize"}, placeholder: "Descricao necessidade"  %>
         </div>
-        <div class="col-12">
+        <div class="col-3">
           <%= f.input :cep, input_html: { class: "capitalize"}, placeholder: "Cep"  %>
         </div>
-        <div class="col-12">
+        <div class="col-3">
           <%= f.input :rua, input_html: { class: "capitalize"}, placeholder: "Rua"  %>
         </div>
-        <div class="col-12">
+        <div class="col-3">
           <%= f.input :bairro, input_html: { class: "capitalize"}, placeholder: "Bairro"  %>
         </div>
-        <div class="col-12">
+        <div class="col-3">
           <%= f.input :numero, input_html: { class: "capitalize"}, placeholder: "Numero"  %>
         </div>
         <div class="col-12">
           <%= f.input :complemento, input_html: { class: "capitalize"}, placeholder: "Complemento"  %>
         </div>
-        <div class="col-12">
-          <%= f.association :g_estado, input_html: { class: "capitalize"}, placeholder: "G estado"  %>
+        <div class="col-3">
+          <%= f.association :g_estado, collection: GEstado.all.order(:nome_fantasia), label_method: :nome_fantasia, value_method: :id, input_html: { class: "capitalize" }, prompt: "Selecione um estado" %>
         </div>
-        <div class="col-12">
-          <%= f.association :g_cidade, input_html: { class: "capitalize"}, placeholder: "G cidade"  %>
+        <div class="col-3">
+          <%= f.association :g_cidade, collection: GCidade.all.order(:nome_fantasia), label_method: :nome_fantasia, value_method: :id, input_html: { class: "capitalize" }, prompt: "Selecione uma cidade" %>
         </div>
-        <div class="col-12">
-          <%= f.association :a_unidade_treinamento, input_html: { class: "capitalize"}, placeholder: "A unidade treinamento"  %>
+        <div class="col-3">
+          <%= f.association :a_unidade_treinamento, collection: AUnidadeTreinamento.all.order(:descricao), label_method: :descricao, value_method: :id, input_html: { class: "capitalize" }, prompt: "Selecione uma unidade" %>
         </div>
-        <div class="col-12">
-          <%= f.association :a_sexo, input_html: { class: "capitalize"}, placeholder: "A sexo"  %>
+        <div class="col-3">
+          <%= f.association :a_sexo, collection: ASexo.all.order(:descricao), label_method: :descricao, value_method: :id, input_html: { class: "capitalize" }, prompt: "Selecione um sexo" %>
         </div>
       </div>
     </div>
