--- a/app/views/a_atletas/index.html.erb
+++ b/app/views/a_atletas/index.html.erb
@@ -45,7 +45,7 @@
                     <td><%= a_atleta.cpf %></td>
                     <td><%= a_atleta.data_nascimento %></td>
                     <td><%= a_atleta.contato1 %></td>
-                    <td><%= a_atleta.a_unidade_treinamento %></td>
+                    <td><%= a_atleta.a_unidade_treinamento&.descricao %></td>
                     <td><%= a_atleta.a_sexo&.descricao %></td>
                   </div>
                 </div>
