--- a/app/views/g_cidades/index.html.erb
+++ b/app/views/g_cidades/index.html.erb
@@ -16,7 +16,7 @@
           <tr>
             <th class="text-center">Ações</th>
             <th><%= sort_link(@q, :nome_fantasia, t("activerecord.attributes.g_cidade.nome_fantasia")) %></th>
-            <th><%= sort_link(@q, :g_estado, t("activerecord.attributes.g_cidade.g_estado")) %></th>
+            <th><%= sort_link(@q, :g_estado, t("activerecord.attributes.g_cidade.g_estado.Estados")) %></th>
           </tr>
         </thead>
         <tbody>
