--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -25,7 +25,7 @@
           <%= render "devise/shared/error_messages", resource: resource %>
           <div class="form-group">
             <i class="fas fa-user input-icon"></i>
-            <%= f.input :nome, autofocus: true, autocomplete: "name", placeholder: "Nome completo", input_html: { class: "form-control", required: true }, label: false %>
+            <%= f.input :nome, autofocus: true, autocomplete: "name", placeholder: "Nome completo", input_html: { class: "form-control"}, label: false %>
           </div>
           <div class="form-group">
             <i class="fas fa-envelope input-icon"></i>
