--- a/app/views/layouts/home_application.erb
+++ b/app/views/layouts/home_application.erb
@@ -6,6 +6,9 @@
     <!-- Metadados  -->
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <link rel="icon" type="image/png" sizes="32x32" href="/layout/assets/img/BannerOficial.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/layout/assets/img/BannerOficial.png">
+    <link rel="icon" type="image/svg+xml" href="/layout/assets/img/BannerOficial.svg">
     <% # Dependências CSS %>
     <%= stylesheet_link_tag "landing_page",                                  "data-turbo-track": "reload" %>
     <% # App JS do projeto %>
