--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,9 @@
     <title>Template</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" sizes="32x32" href="/layout/assets/img/BannerOficial.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/layout/assets/img/BannerOficial.png">
+    <link rel="icon" type="image/svg+xml" href="/layout/assets/img/BannerOficial.svg">
     <!-- Metadados  -->
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
