--- a/app/views/layouts/devise_application.html.erb
+++ b/app/views/layouts/devise_application.html.erb
@@ -6,6 +6,9 @@
     <!-- Metadados  -->
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <link rel="icon" type="image/png" sizes="32x32" href="/layout/assets/img/BannerOficial.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/layout/assets/img/BannerOficial.png">
+    <link rel="icon" type="image/svg+xml" href="/layout/assets/img/BannerOficial.svg">
     <% # Dependências CSS %>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
