wip: preparando alteracoes

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,7 +6,7 @@
         <div class="col-md-6">
           <span class="date-info">
             <i class="fas fa-calendar-alt me-2"></i>
-            Quinta-feira, 4 de agosto de 2025
+            Terça-feira, 19 de agosto de 2025
           </span>
         </div>
         <div class="col-md-6 text-end">
