--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/layout/assets/img/BannerOficial.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/layout/assets/img/BannerOficial.png">
     <link rel="icon" type="image/svg+xml" href="/layout/assets/img/BannerOficial.svg">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <!-- Metadados  -->
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
