--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar navbar-expand-xl navbar-dark shadow-sm rounded-3 mx-3 my-2" style="background-color: #5b260d;">
+<div class="navbar navbar-expand-xl navbar-dark shadow-sm rounded-3 mx-3 my-2" style="background-color: #6c3a22;">
   <div class="container-fluid">
     <!-- Botão para abrir sidebar no mobile -->
     <div class="d-flex d-xl-none me-2">
